tests/build/cases/widget_new/incorrect_arg_type4.stderr
error[E0277]: the trait bound `bool: IntoVar<GradientStops>` is not satisfied
   --> cases/widget_new/incorrect_arg_type4.rs:10:20
    |
8   |         background_gradient = {
    |                               - required by a bound introduced by this call
9   |             axis: 0.deg(),
10  |             stops: true
    |                    ^^^^ the trait `IntoVar<GradientStops>` is not implemented for `bool`
    |
    = help: the following implementations were found:
              <bool as IntoVar<AutoSize>>
              <bool as IntoVar<CaptureMode>>
              <bool as IntoVar<Factor>>
              <bool as IntoVar<FontFeatureState>>
            and 6 others
note: required by a bound in `background_gradient_ArgsImpl::<T_axis, T_stops>::new`
   --> $WORKSPACE/zero-ui/src/properties/visual.rs
    |
    | pub fn background_gradient(child: impl UiNode, axis: impl IntoVar<LinearGradientAxis>, stops: impl IntoVar<GradientStops>) -> impl UiNode {
    |                                                                                                    ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `background_gradient_ArgsImpl::<T_axis, T_stops>::new`
